# broadcast_app

./: .env.example  .gitignore  MVP_ROADMAP.md  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  database.py  livekit.yaml  main.py  pyproject.toml  worker.py
backend/api/: __init__.py
backend/api/v1/: deps.py
backend/api/v1/endpoints/: admin.py  auth.py  notifications.py  stream.py  user.py  webhooks.py  websocket.py
backend/core/: config.py  exceptions.py  handlers.py  lifespan.py  logger.py  websocket_manager.py
backend/models/: __init__.py  base_model.py  notifications.py  stream.py  user.py  user_device.py
backend/repositories/: __init__.py  base.py  notification.py  stream.py  user.py
backend/schemas/: __init__.py  notification.py  stream.py  user.py  user_device.py
backend/scripts/: seed_db.py  webhook_test.py
backend/services/: __init__.py  admin.py  auth.py  cloudinary_service.py  firebase_service.py  notification_dispatcher.py  notifications.py  stream_service.py  user.py
backend/utils/: jwt.py
stream_app/: .gitignore  build.yaml  pubspec.yaml
stream_app/android/app/: build.gradle.kts  google-services.json
stream_app/ios/Runner/: Info.plist
stream_app/lib/: firebase_options.dart  main.dart
stream_app/lib/core/: constants.dart  failures.dart  locator.dart  theme.dart
stream_app/lib/views/: follower_ring_screen.dart  following_ring_screen.dart
stream_app/macos/Flutter/: GeneratedPluginRegistrant.swift
stream_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+63 files in other folders)
